--- a/index.qmd
+++ b/index.qmd
@@ -12,3 +12,5 @@ website:
 ---
 
 Eventually will add some post linking to paper implementations
+
+Everything that you see here is work in progress
