--- a/docu/paper implementation.qmd
+++ b/docu/paper implementation.qmd
@@ -1,6 +1,5 @@
 ---
-title: "paper implementation"
-editor: visual
+title: "Paper implementations"
 ---
 
 ## the following are few of papers that I implemented
