--- a/docu/SEA/index.qmd
+++ b/docu/SEA/index.qmd
@@ -1,5 +1,5 @@
 ---
-title : "Introduction" 
+title : "Sea of Everything" 
 ---
 
 Inspired by the Sea of foundations By Professro Ravi Vakil , which covers pretty much everything one needs to master Algebraic geometry. I have titled this section as Sea of Everything where i would be covering all my current interests related to fields of financial mathematics,programming , machine learning , crypto , etc...
