--- a/docu/SEA/math.qmd
+++ b/docu/SEA/math.qmd
@@ -25,6 +25,8 @@ $k_{n+1} = n^2 +k_n^2 - k_{n-1}$
 
 $\dots$
 
+$F_{\ell} = \mathbb{P}\{X - {\ell} \leq{x} | X > {\ell} \} = \frac{F(x+ {\ell}) - F(\ell)}{1 - F_{X}\{\ell\}}$
+
 ```{r}
 library(Sim.DiffProc)
 mu=1;sigma=0.5;theta=2
