--- a/docu/SEA/index.qmd
+++ b/docu/SEA/index.qmd
@@ -7,3 +7,5 @@ Inspired by the Sea of foundations By Professro Ravi Vakil , which covers pretty
 This whole section under Sea of Everything would mostly function as a blog, conventional blogs are very badly designed and difficult to navigate as of now i have just decided to maintain my articles as part of this website. ~~If it gets cumbersome to maintain I might convert the webpage into a full blown traditional blog , but I am skeptical as of now.~~
 
 My Home page would host articles that I have written to explain myself the inner - working of an idea or a concept and which are fascinating enough to be highlighted amidst all of this.
+
+The current direction of this ***section*** mostly looks like combination of notes and insights.
