--- a/docu/SEA/time_series.qmd
+++ b/docu/SEA/time_series.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Time Series Analysis"
-highlight-style: pygments
-citation-location: margin
+title: "Time Series and Econometric Analysis"
+
 execute: 
-  eval: true
   warning: false
+  freeze: true
+  cache: true
 format:
   html:
     html-math-method: katex
@@ -54,7 +54,6 @@ $$r_t = \ln(P_t + D_t) -\ln(P_{t-1})$$ Where $D_t$ is dividend payment between t
 
 <br/> Similiary we can define <u>multiperiod simple return</u> by $$ R_t[k] = exp{[\frac{1}{k}\sum_{j=0}^{k-1}(1+R_{t-j})]} -1$$ where exp is the exponentential function and k is total number periods the asset was held for.
 
-
 <u>Log return</u> would be $$ r_t[k] = r_t +r_{t-1}+.....+r_{t-k+1}$$
 :::
 
@@ -66,7 +65,8 @@ $$R_{p,t}= \sum_{i=1}^{N}w_i R_{it}$$
 Where $p$ is the portfolio , $i$ the ith asset and $w_i$ the weight of the ith asset in the portofolio
 :::
 
-[* Load data and header  =T give the 1st row of the data file , that is the names of the cloumns of the data set ]{.aside}
+[\* Load data and header =T give the 1st row of the data file , that is the names of the cloumns of the data set]{.aside}
+
 ```{r  }
 #| code-block-border-right: false
 # da contains the return for 5 five stocks and indexes namely IBM ,value-weighted , equal-weighted and S&P composite index from 1970 to 2008
@@ -88,6 +88,7 @@ pv  = 2*(1-pnorm(t)) # Calculate p-value
 pv
 
 ```
+
 ```{r}
 #| layout-ncol: 2
 library(ggplot2)
@@ -106,11 +107,28 @@ scale_x_continuous("log return distribution",limits = c(-0.15,0.15))
 #stat_function(
 #fun = dnorm,args = with(ibm,c(mean =mean(simple_return),sd = sd(simple_return))))+
 ```
-The Time serie
+
 ```{r}
+
 ibm1 = ibm[, 2]
 plot(ibm1,type = 'l')
-ibm2 = ts(ibm1,frequency = 1 ,start = c(1970,1))
+ibm2 = ts(ibm1,frequency = 250 ,start = c(1970,1))
 plot.ts(ibm2)
-
+acf(ibm1,lag =250,ylim= c(-0.05,0.05))
+acf(ibm2,lag=250,ylim= c(-0.05,0.05))
 ```
+
+### Linear Time Series
+
+::: {#def-Stationarity}
+## Stationarity
+
+Foundation of time series analysis is Stationarity. A time series $\{r_t\}$ is said to be <u>strictly stationary</u> if the joint distribution of $(r_{t_{1}},r_{t_{2}},r_{t_{3}},....,r_{t_{k}})$ is identical to that of $(r_{t_{1+t}},r_{t_{2+t}},r_{t_{3+t}},....,r_{t_{k+t}})$ for all $t$ , where $k$ is an arbitrary positive integer and $(t_1,t_2,t_3,....,t_k)$ is collection of $k$ positive integers. Strict stationarity is very hard to verify emperically <br/> A time series is said to be <u>weakly stationary</u> if the mean of $r_t$ and the covariance between $r_t$ and $r_{t-l}$ are time invariant where $l$ is an arbitrary integer. Weak stationarity enables us to make inference cooncerning future observations
+
+Weak stationarity is commonly studied and more practical.
+
+The covariance $\gamma_l = Cov(r_t,r_{t-l})$ is called the <u>lag-$l$ autocovariance of $r_t$</u>. From the above defintion it follows that
+
+-   $\gamma_0=Var(r_t)$
+-   $\gamma_{-l} = \gamma_l$
+:::
