--- a/docu/posts/firstpost.qmd
+++ b/docu/posts/firstpost.qmd
@@ -129,9 +129,10 @@ Here is the list of resources that I am currently reading and following:
        
     B. Books and videos
         
-      * Stochastic Calculus for finance II by Steven E Shreve [This is enough for all intents and purposes] 
-      * Mathematical Modeling and computation in finance by Cornelis W Oosterlee and Lech A Grezelak (You can find videos which follow the book by the later author on you tube making it one of the most approachable resource on the topic) I would sugget to go through this text once, before you go for Shreve's book. Shreve's book extensively makes use of Measure Theory(though not in a great detail I would like but more than sufficient for the purpose )
-      * Pricing options with Mathematical Models (great course on coursera )
+      * Stochastic Calculus for finance II by Steven E Shreve [This is enough for all intents and purposes] but if you are interested in Levy processes than you might have to refer to another book.
+      * Mathematical Modeling and computation in finance by Cornelis W Oosterlee and Lech A Grezelak (You can find videos which follow the book by the later author on you tube making it one of the most approachable resource on the topic) I would sugget to go through this text once, before you go for Shreve's book. Shreve's book extensively makes use of Measure Theory.Great theoretical and practical book. I personally use this book and shreve's book for refernce. TO be honest no stochastic calculus for finance book actually is self contained, many theorems are referenced.
+      * Pricing options with Mathematical Models (great course on coursera ) from Caltech.
+      
 4.  Mathematics relevant for finance
       
 
