--- a/docu/posts/firstpost.qmd
+++ b/docu/posts/firstpost.qmd
@@ -95,7 +95,8 @@ Here is the list of resources that I am currently reading and following:
       
 
     B. Books and videos
-      * Introudction to mathematical statistics by Hogg ,Mckean and Craig
+      * Introduction to mathematical statistics by Hogg ,Mckean and Craig
+      * All of Statistics by L. Wasserman 
       * Mathematical theory of Bayesian Mathematics by Sumio Watanabe
       * Statistics for Application by Philippe Rigollet (Youtube video - MIT OCW) 
 2.  Machine learning and deep learning
@@ -133,16 +134,16 @@ Here is the list of resources that I am currently reading and following:
       * Mathematical Modeling and computation in finance by Cornelis W Oosterlee and Lech A Grezelak (You can find videos which follow the book by the later author on you tube making it one of the most approachable resource on the topic) I would sugget to go through this text once, before you go for Shreve's book. Shreve's book extensively makes use of Measure Theory.Great theoretical and practical book. I personally use this book and shreve's book for refernce. TO be honest no stochastic calculus for finance book actually is self contained, many theorems are referenced.
       * Pricing options with Mathematical Models (great course on coursera ) from Caltech.
       
-4.  Mathematics relevant for finance
+
       
 
-5.  Financial products (Mostly Options)
+4.  Financial products (Mostly Options)
 
-6.  Programming tools
+5.  Programming tools
 
     A. Topics
     
 
-7.  Scientific Computing
+6.  Scientific Computing
 
-8.  TradFi(Traditional Finance)
+7.  TradFi(Traditional Finance)
