--- a/docu/posts/firstpost.qmd
+++ b/docu/posts/firstpost.qmd
@@ -36,19 +36,9 @@ topic, current and past important research papers you need to read and
 research work by list of researchers you need to follow voilà you are
 close to becoming an expert in the field given of course you have had
 comprehensive understanding of the topic which you are able explain with
-relative ease. A researcher lets say in the field of pure mathematics
-doesnt care whether his research is going to be relevant in next 10
-years or 20 years,for him the joy lies in solving the problem and coming
-up with innovative solution , it hardly matters whether his research
-topic will be relevant for he has gained a level of expertise to such an
-extent that such a thing were ever to bother him he would just shift his
-focus in a closely related field(assuming there is always a closely
-related field) of relevance with minimal difficulty and at time same
-time continue doing research on the topic and hoping there would be
-someone who might pursue it further later on.
+relative ease. 
 
-This approach of the researcher I think is the best way to move forward
-in learning any topic. Make yourself an expert in the basics of the
+Make yourself an expert in the basics of the
 field and you are free to move around without the overhead of being
 relevant or for that matter employable. To worry about whether the
 resource you have chosen to master a topic is enough or not gets you no
@@ -65,13 +55,13 @@ impossible to cover that many books( they could just be resources for
 reference but that's hardly ever the tone of those articles) in any
 reasonable amount of time.
 
-You can refer to the resources section up top for list of all books , articles , youtube video that I have come across over the period of time. Here I have just listed down couple of books on each topic
+You can refer to the resources section up top for list of all books , articles , youtube video that I have come across over the period of time(yet to populate the section) . Here I have just listed down couple of books on each topic
 and contents of each topics that one needs to master(based on job
 description for almost any type of quantitative role) and that can be
 completed in a reasonable amount of time(give yourself a year or six months if you are really comfortable with the math ). I have included books that are
 at times quite math heavy since I prefer them more and I have a
 background(Masters) in pure(non-applicable) mathematics. I would suggest
-to get comfortable with math for it becomes easier in manipulating
+to get comfortable with math for it becomes easier fine-tuning
 models and creating new ones from the existing models without much
 effort. This is particularly true in this field as one proceeds with the
 assumption that all models are wrong, math would help you in converging
@@ -111,7 +101,7 @@ Here is the list of resources that I am currently reading and following:
       
       * [Theory]Probabilistic Machine learning Book 1 by Kevin Murphy 
       * [Theory]Understanding Machine learning theory algorithims 
-      * ISLR[Introduction to statistical learnign - good for R implementation] and ESL[Elements of statistical learning- Bible of Statistical Learning] by Hastie and Tibshirani
+      * ISLR[Introduction to statistical learning - good for R implementation] and ESL[Elements of statistical learning- Bible of Statistical Learning] by Hastie and Tibshirani
       * [Implementation] Hands-On Machine Learning with Scikit-Learn, Kera & Tensorflow by Aurelien Geron
       * [Bonus Implementation] Machine Learing in C++ by Kiril Kolodiazhnyi
       * [Coursera - Deep Learning.ai - Andrew Ng] Machine Learning Specialization(This course enough for all intents and purposes unless you wish to delve deeper)
@@ -137,13 +127,40 @@ Here is the list of resources that I am currently reading and following:
 
       
 
-4.  Financial products (Mostly Options)
-
-5.  Programming tools
+4.  Traditional Finance (This is good to have knowledge but many don't have strict requirements for this excpet for                                  Financial products)
+    
+    A. Topics
+      * Active portfolio management
+      * Financial products 
+      * Basics of financial accounting (Good to Know)
+      * Econometrics
+      * Valuation (Mostly for Fun)
+      * Market risk (Depends on your interests)
+    
+    B. Books and Videos
+      * Advances in Active Portfolio Management: New Developments in Quantitative Investing by Grinold and Kahn
+      * Options, Futures and Other Derivatives by John C. Hull
+      * Introductory Financial Accounting for Business by Edmonds and Edmonds
+      * Wooldridge's book on Econometrics
+      * Damodaran's Lectures on youtube for Valuation
+      * 4 Volume book set by Carol Alexanders
+    
+5.  Software Development 
 
     A. Topics
+      * Data Structure and algorithims , Complexity theory (Optional but really good to have)
+      * Shell Scripting (Bash - Good to start with )
+      * Kubernetes and Docker(Optional)
+      * Python(Absolute Must these days) and SQL (C++ and Kdb+ good alternatives based on job description)
     
+    B. Books and videos
+      * Udemy or Educative ,Stick with one depends on your learning approach personally I go with educative the yearly             subscription is worth it
+      * Dearth of resources are already available on youtube and web, the resource section on this topic is very                   subjective
+      
 
-6.  Scientific Computing
-
-7.  TradFi(Traditional Finance)
+6.  Scientific Computing and Computational Methods for Finance
+    
+    * Numerical Recipes: The Art of Scientific Computing 
+    * [Scientific Computing Link](https://www.cs.cmu.edu/~ph/859B/www/misc.html)
+    * [Computational Methods for Quantitative Finance: PDE Methods](https://metaphor.ethz.ch/x/2021/fs/401-4658-00L/)
+    * [Scientific Computing in Finance](http://yadongli.github.io/nyumath2048/) ( One of my favorite resources)
